--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title><P5_Quiz></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1><P5_Quiz></h1>
+    <p>Welcome to <P5_Quiz></p>
+    <a href="/quizzes">QUIZZES</a>
+    <a href="/credits">CREDITS</a>
   </body>
 </html>
