--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><P5_Quiz></title>
+    <title>P5_Quiz</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><P5_Quiz></h1>
+    <h1>P5_Quiz</h1>
     <p>Welcome to <P5_Quiz></p>
     <a href="/quizzes">QUIZZES</a>
     <a href="/credits">CREDITS</a>
