--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>P5_Quiz</h1>
-    <p>Welcome to <P5_Quiz></p>
+    <p>Welcome to <%= title %></p>
     <a href="/quizzes">QUIZZES</a>
     <a href="/credits">CREDITS</a>
   </body>
