--- a/views/credits.ejs
+++ b/views/credits.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>CREDITS</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
+    <h1>CREDITS</h1>
     <<p>JAIME</p>>
     <img src="https://www.google.es/search?q=JORDAN+3+WHITE+CEMENT&safe=active&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiajeC244XbAhVBlRQKHcFDDEQQ_AUICigB&biw=1366&bih=662#imgrc=Tbrr9s72gVzo5M:">
   </body>
